# garudadb

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/garuda-engine/: Cargo.toml
crates/garuda-engine/examples/: delete_churn_bench.rs
crates/garuda-engine/src/: bootstrap.rs  catalog.rs  checkpoint_service.rs  ddl.rs  delete_store.rs  filter.rs  filter_parser.rs  id_map.rs  lib.rs  lock.rs  optimize.rs  persistence.rs  query.rs  recovery_service.rs  schema.rs  schema_ddl.rs  scoring.rs  segment.rs  segment_ddl.rs  segment_manager.rs  segment_manager_tests.rs  state.rs  storage.rs  storage_io.rs  validation.rs  version.rs  write_service.rs
crates/garuda-engine/tests/: common.rs  test_collection_concurrency.rs  test_collection_create_and_open.rs  test_collection_create_and_open_validation.rs  test_collection_ddl.rs  test_collection_delete_churn_bench.rs  test_collection_dml.rs  test_collection_dql.rs  test_collection_exception.rs  test_collection_filter_behavior.rs  test_collection_flat_index.rs  test_collection_hnsw_behavior.rs  test_collection_index_lifecycle.rs  test_collection_ivf_behavior.rs  test_collection_locking.rs  test_collection_multisegment_behavior.rs  test_collection_open.rs  test_collection_optimize.rs  test_collection_ordering_behavior.rs  test_collection_persistence_behavior.rs  test_collection_planner_flat_behavior.rs  test_collection_query_modes.rs  test_collection_recall.rs  test_collection_recovery.rs  test_collection_recovery_crash_semantics.rs  test_collection_scalar_index.rs  test_collection_visibility.rs  test_storage_atomic_writes.rs  test_storage_disk_format.rs  test_storage_id_map.rs  test_storage_segment_layout.rs  test_storage_version_manager.rs
crates/garuda-engine/tests/support/: schema_helpers.rs  storage_helpers.rs
crates/garuda-index-flat/: Cargo.toml
crates/garuda-index-flat/src/: lib.rs
crates/garuda-index-flat/tests/: test_flat_index.rs
crates/garuda-index-hnsw/: Cargo.toml
crates/garuda-index-hnsw/src/: build.rs  compare.rs  heap.rs  lib.rs  search.rs  search_tests.rs
crates/garuda-index-hnsw/tests/: reverse_edges.rs  test_hnsw_index.rs
crates/garuda-index-ivf/: Cargo.toml
crates/garuda-index-scalar/: Cargo.toml
crates/garuda-math/: Cargo.toml
crates/garuda-meta/: Cargo.toml
crates/garuda-planner/: Cargo.toml
crates/garuda-segment/: Cargo.toml
crates/garuda-segment/src/: codec.rs  doc_codec.rs  index.rs  lib.rs  search.rs  search_candidate_nprobe_tests.rs  search_top_k_tests.rs  storage.rs  types.rs  wal.rs
crates/garuda-segment/tests/: common.rs  test_flat_sidecar.rs  test_hnsw_sidecar.rs  test_ivf_sidecar.rs
crates/garuda-storage/: Cargo.toml
crates/garuda-test-utils/: Cargo.toml
crates/garuda-types/: Cargo.toml
garuda/: Cargo.toml
garuda/src/: cli.rs  command.rs  main.rs  parsing.rs
garuda/tests/: test_cli_contract.rs  test_cli_contract_data.rs  test_cli_contract_ops.rs  test_cli_contract_schema.rs  test_cli_contract_writes.rs
garuda/tests/support/: cli_contract.rs
(+30 files in other folders)
