[workspace]
members = ["crates/*", "garuda"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"
authors = ["Karan"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
