[package]
name = "garuda-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
clap.workspace = true
garuda-engine = { path = "../crates/garuda-engine" }
garuda-types = { path = "../crates/garuda-types" }
serde.workspace = true
serde_json.workspace = true
