[package]
name = "garuda-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
garuda-index-scalar = { path = "../garuda-index-scalar" }
garuda-index-ivf = { path = "../garuda-index-ivf" }
garuda-math = { path = "../garuda-math" }
garuda-meta = { path = "../garuda-meta" }
garuda-planner = { path = "../garuda-planner" }
garuda-segment = { path = "../garuda-segment" }
garuda-storage = { path = "../garuda-storage" }
garuda-types = { path = "../garuda-types" }
serde.workspace = true
libc.workspace = true

[dev-dependencies]
garuda-test-utils = { path = "../garuda-test-utils" }
serde_json.workspace = true
