[package]
name = "garuda-segment"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
garuda-index-flat = { path = "../garuda-index-flat" }
garuda-index-hnsw = { path = "../garuda-index-hnsw" }
garuda-meta = { path = "../garuda-meta" }
garuda-storage = { path = "../garuda-storage" }
garuda-types = { path = "../garuda-types" }
serde.workspace = true
